src/App.css
/* General and Body */
/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

/* App */

/* Header */
header {
  background: white;
  box-shadow: 1px 0 16px rgba(0, 0, 0, 0.2);
  display: grid;
  position: fixed;
  top: 0;
  bottom: 0;
  grid-template-rows: 1fr 250px;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  z-index: 10;
  transition: transform 0.5s;
}

header {
  -webkit-transform: translate3d(-100%, 0, 0);
  transform: translate3d(-100%, 0, 0);
}

header.active {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

header:after {
  display: none;
}

@media screen and (min-width: 640px) {
  header {
    width: 160px;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

@media screen and (min-width: 867px) {
  header {
    width: 200px;
  }
}

.menu-button {
  position: absolute;
  top: 0;
  right: 0;
  width: 50px;
  height: 50px;
  cursor: pointer;
  box-shadow: none;
  border: none;
  background: none;
}

.menu-button:hover svg {
  fill: white;
}

.menu-button.close:hover svg {
  fill: #ffc73f;
}

@media screen and (min-width: 641px) {
  .menu-button {
    display: none;
  }
}
.categories {
  padding: 30px;
  padding-bottom: 0;
}

@media screen and (min-width: 867px) {
  .categories {
    padding: 40px 50px;
  }
}

.secondary-nav,
.copyright {
  font-size: 14px;
}

.copyright {
  margin-top: 0;
  padding: 0 5px;
}

.categories__title {
  font-weight: bold;
}

a {
  color: #000;
  font-weight: bold;
  text-decoration: none;
}

.categories a,
.secondary-nav a {
  display: block;
  color: #666;
  padding: 8px 0;
  font-weight: 400;
}

.categories a {
  font-size: 18px;
  font-weight: 600;
  color: black;
}

@media screen and (min-width: 641px) {
  .categories a {
    font-size: 14px;
    font-weight: 400;
    color: #666;
  }
}
.nav-icon {
  width: 15px;
  height: 15px;
  fill: #666;
  position: relative;
  top: 2px;
}

a:hover,
.categories a:hover,
.secondary-nav a:hover {
  color: #fe5e72;
}

.primary-nav a.active,
.primary-nav a.active .nav-icon,
.categories a:hover,
.categories a:hover .nav-icon {
  color: #fe5e72;
  fill: #fe5e72;
}

.footer {
  text-align: center;
}

.secondary-nav a {
  text-decoration: none;
  display: inline-block;
  margin: 10px;
}

.logo {
  margin: 0;
}

.secondary-nav {
  border-top: 1px solid #ccc;
  text-align: center;
}

.sign-up {
  padding: 10px 20px;
  text-decoration: none;
  display: inline-block;
  margin: 45px 0;
  border: 2px solid #ffc73f;
  border-radius: 20px;
  color: black;
  transition: background-color 0.5s ease;
}

.sign-up:hover {
  color: black;
}

@media screen and (min-width: 641px) {
  .sign-up {
    padding: 10px;
  }
}

@media screen and (min-width: 867px) {
  .sign-up {
    padding: 10px 20px;
  }
}
/* Resources */

@media screen and (min-width: 640px) {
  main {
    width: calc(100% - 160px);
    margin-left: 160px;
  }
}

@media screen and (min-width: 867px) {
  main {
    width: calc(100% - 200px);
    margin-left: 200px;
  }
}

.resources__title-container {
  padding: 100px 20px 0;
  max-width: 1324px;
  margin: auto;
}

.home .resources__title-container {
  text-align: center;
  background: #ffc73f;
  padding: 100px 20px;
  max-width: 100%;
}

@media screen and (min-width: 867px) {
  .resources__title-container {
    padding: 100px 100px 0;
  }

  .home .resources__title-container {
    padding: 100px;
  }
}

.resources__title {
  margin-top: 0;
}

.resources__title,
.page__title {
  font-size: 2rem;
  margin-bottom: 0;
}

.resources__description {
  font-size: 1rem;
  margin-top: 0;
}

.home .resources__description {
  margin: 0;
}

@media screen and (min-width: 800px) {
  .home .resources__title {
    font-size: 4vw;
  }
}

@media screen and (min-width: 1280px) {
  .home .resources__description {
    font-size: 1.25vw;
  }
}

.resources__list-container {
  max-width: 1324px;
  margin: auto;
  padding: 20px;
}

@media screen and (min-width: 867px) {
  .resources__list-container {
    padding: 50px 100px 100px;
  }
}
.resources__list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
  grid-row-gap: 50px;
  grid-column-gap: 20px;
  justify-content: center;
}

@media screen and (min-width: 641px) {
  .resources__list {
    justify-content: start;
  }
}

@media screen and (min-width: 867px) {
  .resources__list {
    grid-column-gap: 50px;
  }
}

.home .resources__list {
  padding-top: 50px;
}

.resource {
  border-radius: 20px;
  overflow: hidden;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
  position: relative;
  max-width: 320px;
}

.resource__text {
  padding: 10px;
}

.resource__image {
  max-width: 100%;
  height: auto;
}

.resource__buttons {
  position: relative;
  top: -20px;
  text-align: center;
  background: white;
  border-radius: 10px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
  display: block;
  margin: auto;
  width: 100px;
}
.button-icon {
  width: 20px;
  height: 20px;
  padding: 0;
  border: none;
  fill: #ccc;
  display: inline-block;
  margin: 5px;
  cursor: pointer;
  text-align: center;
  background: none;
}
.favorite.favorited {
  fill: #fe5e72;
}

.resource__text {
  margin-top: -30px;
}

/* Regular Pages */
.page {
  max-width: 800px;
  margin: auto;
  padding: 100px;
}

.page__title {
  margin-top: 0;
}

.submit-page {
  display: grid;
  padding: 0;
  max-width: 100%;
  align-items: stretch;
}

.page-half {
  padding: 20px;
  display: grid;
  align-items: stretch;
  align-content: center;
}

.page-half:first-child {
  background: #ffc73f;
  height: 200px;
}

.page-half img {
  height: 200px;
  margin: auto;
}

@media screen and (min-width: 1400px) {
  .page-half {
    padding: 50px;
  }
  .page-half img {
    height: auto;
  }
  .page-half:first-child {
    height: auto;
  }
  .submit-page {
    grid-template-columns: 50% 50%;
    min-height: 100vh;
  }
}

/* Submission */

input,
textarea {
  display: block;
  width: 100%;
  margin-bottom: 20px;
  font-size: 16px;
  padding: 5px;
  margin-top: 10px;
  border: 2px solid black;
  transition: border-color 0.5s ease;
  box-shadow: none;
}

textarea {
  min-height: 80px;
}

label {
  font-weight: 600;
}

input:focus,
textarea:focus {
  outline: none;
  border-color: #ffc73f;
}

.required {
  color: #fe5e72;
}

.submission-form__button {
  padding: 10px 20px;
  text-decoration: none;
  display: inline-block;
  border: 2px solid #ffc73f;
  border-radius: 20px;
  color: black;
  font-weight: 600;
  cursor: pointer;
  transition: background-color 0.5s ease;
  background-color: white;
}

.submission-form__button:hover,
.sign-up:hover {
  background-color: #ffc73f;
}
/* Newsletter Sign-up */

/* Animation */
@-webkit-keyframes GradientAnimation {
  0% {
    background-position: 88% 0%;
  }
  50% {
    background-position: 13% 100%;
  }
  100% {
    background-position: 88% 0%;
  }
}
@-moz-keyframes GradientAnimation {
  0% {
    background-position: 88% 0%;
  }
  50% {
    background-position: 13% 100%;
  }
  100% {
    background-position: 88% 0%;
  }
}
@keyframes GradientAnimation {
  0% {
    background-position: 88% 0%;
  }
  50% {
    background-position: 13% 100%;
  }
  100% {
    background-position: 88% 0%;
  }
}

